# video_renderer

./: CMakeLists.txt  dirextx_render.cpp  dirextx_render.h  gstreamer_render.cpp  gstreamer_render.h  renderer.cpp  renderer.h
